--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "cowsayjs": "^2.0.0",
+    "figlet": "^1.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
